@@ -4,7 +4,7 @@ openvas-mkcert \- Creates a scanner certificate
 .sp
 .SH SYNOPSIS
 .BI openvas-mkcert  
-[ -q ]
+[ -q ] [ -f ]
 
 .SH DESCRIPTION
 
@@ -23,6 +23,9 @@ scanner certificate.
 
 .I -q
 quickly generates a new certificate, without asking any question
+
+.I -f
+force overwriting of already existing certificate files
 
 
 .SH SEE ALSO
